--- a/views/404.html
+++ b/views/404.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>404</title>
   </head>
   <body>
-    <h1>Home</h1>
-    <p>Welcome to my page!</p>
+    <img src="404.png" alt="404 error">
   </body>
 </html>
