--- a/views/forbidden.html
+++ b/views/forbidden.html
@@ -5,7 +5,7 @@
     <title>About</title>
   </head>
   <body>
-    <h1>About</h1>
-    <p>About me</p>
+    <h1>Forbidden</h1>
+    <p>You can't be here</p>
   </body>
 </html>
