--- a/views/home.html
+++ b/views/home.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>History</title>
+    <title>Home</title>
   </head>
   <body>
-    <h1>History</h1>
-    <p>Page not yet available... Give me more time, folks.</p>
+    <h1>Home</h1>
+    <p>Hello world</p>
   </body>
 </html>
